name:               examples
version:            0.0.1
license:            BSD3
author:             Dom De Re
maintainer:         Dom De Re
copyright:          Copyright (C) 2014
synopsis:           Examples
category:           Data
description:        Examples
cabal-version:      >= 1.18
build-type:         Simple

flag                    small_base
    description:        Choose the new, split-up base package.

executable              csvStream
    default-language:   Haskell2010
    -- .hs or .lhs file containing the Main module.
    hs-source-dirs:     CsvStream

    main-is:            Main.hs

    ghc-options:        -Wall
                        -fno-warn-unused-imports
                        -fno-warn-unused-binds
                        -fno-warn-unused-do-bind
                        -fno-warn-type-defaults

    build-depends:      base < 5 && >= 4
                    ,   bytestring                      == 0.10.*
                    ,   cassava                         == 0.4.*
                    ,   conduit                         == 1.2.*
                    ,   conduit-extra                   == 1.1.*
                    ,   either                          == 4.3.*
                    ,   mtl                             == 2.2.*
                    ,   resourcet                       == 1.1.*
                    ,   cassava-conduit

    default-extensions: NoImplicitPrelude
